--- a/site/src/app/search/share-result/share-result.component.html
+++ b/site/src/app/search/share-result/share-result.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-4">
   <div class="card-body">
-    <h5 class="card-title"><span class="share-type badge badge-info">{{ share.type }}</span> {{ share.name }}</h5>
+    <h5 class="card-title"><span class="share-type badge" [ngClass]="shareTypeClass">{{ share.type }}</span> {{ share.name }}</h5>
     <p class="card-text p-2 p-md-4" [innerHTML]="share.description"></p>
     <a target="_blank" rel="noopener noreferrer" [href]="share.url" class="btn btn-sm btn-primary">Taskernet Import</a>
     <div class="tags mt-3">
