--- a/site/src/app/search/share-result/share-result.component.scss
+++ b/site/src/app/search/share-result/share-result.component.scss
@@ -15,10 +15,9 @@
 }
 
 .share-description {
-  padding: 1.2rem;
   list-style-position: inside;
   max-height: 500px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .card-footer {
