--- a/site/src/app/search/search-page/search-page.component.scss
+++ b/site/src/app/search/search-page/search-page.component.scss
@@ -8,3 +8,7 @@
   background: url(../../../assets/algolia-logo.svg) no-repeat right center;
   background-size: 5rem 1rem;
 }
+
+.disclaimer {
+  font-size: 0.8rem;
+}
