reduce margin below nav

--- a/site/src/app/app-root/app.component.html
+++ b/site/src/app/app-root/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-light mb-5">
+<nav class="navbar navbar-light bg-light mb-4 mb-lg-5">
   <a class="navbar-brand">Taskernet Collector</a>
   <ul class="navbar-nav float-right">
     <li class="nav-item">
