--- a/site/src/app/search/search-page/search-page.component.html
+++ b/site/src/app/search/search-page/search-page.component.html
@@ -3,10 +3,10 @@
   <div class="disclaimer text-center">
     <strong>Warning:</strong> Remember to always check the description before importing anything from Taskernet. Do not enable anything unless you are sure what it does.
   </div>
-  <form class="mt-4 form-inline justify-content-center" [formGroup]="searchForm" (ngSubmit)="onSearch()">
+  <form class="mt-3 form-inline justify-content-center" [formGroup]="searchForm" (ngSubmit)="onSearch()">
     <label class="sr-only" for="search-box">Search</label>
-    <input id="search-box" type="text" placeholder="Enter search terms" formControlName="searchBox">
-    <button type="submit" class="btn btn-primary ml-1">Search</button>
+    <input class="mt-1" id="search-box" type="text" placeholder="Enter search terms" formControlName="searchBox">
+    <button type="submit" class="btn btn-primary ml-1 mt-1">Search</button>
   </form>
   <div id="results" class="mt-4 px-lg-5" infiniteScroll (scrolled)="onScroll()">
     <app-share-result *ngFor="let share of searchResults" [share]="share"></app-share-result>
